[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psi-continuum-statespace"
version = "0.1.0"
description = "State-space diagnostics for Psi–Continuum Cosmology"
authors = [
    { name = "Dmitry V. Klimov" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "matplotlib",
    "psi-continuum-v2>=0.2.3"
]

[project.scripts]
psi-statespace = "psi_continuum_statespace.cli:main"
