[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psi-continuum-statespace"
version = "0.1.0"
description = "Macroscopic state-space diagnostics for late-time cosmic expansion"
authors = [
    { name = "Dmitry V. Klimov" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.6",
    "psi-continuum-v2>=0.2.3"
]

[project.scripts]
psi-statespace = "psi_continuum_statespace.cli:main"

[tool.setuptools]
packages = ["psi_continuum_statespace"]
